[package]
name = "wbserver"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
